# VectorETL

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yaml
examples/: airtable_to_pincone.yaml  apachecassandra_to_pinecone.yaml  digital_ocean_space_to_pincone.yaml  flutterwave_to_pinecone.yaml  gmail_to_pinecone.yaml  google_bigquery_to_pincone.yaml  hubspot_to_pinecone.yaml  intercom_to_pinecone.yaml  mailchimp_to_pinecone.yaml  paystack_to_pincone.yaml  s3_to_milvus_using_unstructured_api.yaml  zohocrm_to_pinecone.yaml  zohodesk_to_pinecone.yaml
examples/config_files/: dropbox_to_weaviate_gemini.yaml  postgres_to_pinecone.yaml
examples/python/: dropbox_to_weaviate.py  import_yaml_config.py  postgresql_to_pinecone.py
tests/: test_embedding_mods.py  test_source_mods.py  test_target_mods.py
vector_etl/: __init__.py  flow.py  main.py  orchestrator.py
vector_etl/config/examples/: box_to_pinecone.yaml  file_to_pinecone.yaml  gcs_to_qdrant_cohere.yaml  s3_to_pinecone.yaml
vector_etl/embedding_mods/: __init__.py  azure_openai.py  base.py  cohere.py  google_gemini.py  huggingface.py  openai.py
vector_etl/source_mods/: __init__.py  airtable_loader.py  apache_cassandra_astra_loader.py  base.py  box_loader.py  database_loader.py  digital_ocean_spaces_loader.py  dropbox_loader.py  file_loader.py  flutterwave_loader.py  gmail_loader.py  google_bigquery.py  google_cloud_storage.py  google_drive.py  hubspot_loader.py  intercom_loader.py  local_file.py  mailchimp_loader.py  paystack_loader.py  s3_loader.py  stripe_loader.py  zendesk_loader.py  zoho_crm_loader.py  zoho_desk_loader.py
vector_etl/target_mods/: __init__.py  base.py  lancedb.py  milvus.py  mongodb.py  neo4j.py  pinecone.py  qdrant.py  singlestore.py  supabase.py  tembo.py  weaviate.py
