[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vector-etl"
authors = [
    {name = "Jide Ogunjobi", email = "jide@contextdata.ai"},
]
description = "Lightweight ETL Framework for Vector Databases"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["vector database", "etl"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
#dependencies = [
#    "requests",
#]
dynamic = ["version"]

[tool.setuptools_scm]